--- a/src/componentes/SecaoContatos/SecaoContatos.module.css
+++ b/src/componentes/SecaoContatos/SecaoContatos.module.css
@@ -8,6 +8,11 @@
 
   .containerSecaoContatos h6{
     font-size:20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
 
   }
  .cardContato{
@@ -16,14 +21,25 @@
     flex-wrap: wrap;
     margin-top:30px;
     align-items: center;
+    justify-content: center;
+
+
+ 
+    
     
   }
 .boxCard{
-
-    border:1px solid white;
+text-align: left;
+  line-height: 25px;
+    border:none;
     padding: 10px;
     margin-right: 10px;
 
+  }
+  .boxCard img{
+    margin-right: 5px;
+    width: 10px;
+    height:10px;
 
 
   }
